# tumbller-fc-frames-fastapi

./: .env.template  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
fastapi-frames-server/: config.py  main.py
fastapi-frames-server/templates/: control_buttons.html  control_mode.html  farcaster.json  fb_control.html  fcframe.html  index.html  lr_control.html  pay_button.html  payment_failed.html  payment_frame.html  rover_selection.html  transactions.html  waiting.html
scripts/: run_mini_app.sh  setup.sh
