[build-system]
requires = ["setuptools>=70.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "tumbller-fc-frames-fastapi"
version = "0.1.0"
description = ""
authors = [{"name" = "Anuraj", "email" = "anuraj-rp@users.noreply.github.com"}]
readme = "README.md"
requires-python = ">= 3.10"

[dependencies]
fastapi = "^0.110.0"
uvicorn = "0.29.0"
httpx = "0.27.0"
sqlalchemy = "^2.0.30"

[project.optional-dependencies]
dev = [
    "ruff",
]
