[build-system]
requires = ["setuptools>=70.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "tumbller-fc-frames-fastapi"
version = "0.1.0"
description = ""
authors = [{"name" = "Anuraj", "email" = "anuraj-rp@users.noreply.github.com"}]
readme = "README.md"
requires-python = ">= 3.10"
dependencies = [
  "fastapi",
  "uvicorn",
  "httpx",
  "sqlalchemy",
  "jinja2",
  "beautifulsoup4",
  "python-dotenv",
  "pillow",
  "farcaster",
]

[project.optional-dependencies]
dev = [
    "ruff",
]
